--- a/StoreFront/Views/User/Registration.cshtml
+++ b/StoreFront/Views/User/Registration.cshtml
@@ -1,7 +1,8 @@
-﻿@model StoreFront.Models.User
+﻿@model StoreFront.Models.Users
 
 @{
     ViewBag.Title = "Registration";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Registration</h2>
@@ -58,8 +59,11 @@ else
             </div>
 
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                <div class="col-md-2">
+                    @Html.ActionLink("Login", "Login")
+                </div>
+                <div class="col-md-10">
+                    <input type="submit" value="Register" class="btn btn-default" />
                 </div>
             </div>
         </div>
@@ -73,10 +77,6 @@ else
 
 }
 
-
-<div>
-    @Html.ActionLink("Login", "Login")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
