Completed ShoppingCart implementation

--- a/StoreFront/Views/Home/Index.cshtml
+++ b/StoreFront/Views/Home/Index.cshtml
@@ -4,8 +4,6 @@
 }
 
 <body>
-    <br />
-    <p style="text-align:center;">Welcome @HttpContext.Current.User.Identity.Name</p>
     <div id="siteLogo" class="container-fluid">
         <img src="~/Images/Shred-logo.png" class="img-responsive"/>
     </div>
@@ -69,6 +67,10 @@
     </div>
     <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/RJrcEEaJNEc" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="container-fluid text-center">
+        <h2>Find Us!</h2>
+        <h4>Located only a stone's throw from Hobbiton!</h4>
     </div>
     <div class="container-fluid" id="googleMap" style="height:400px;width:100%;"></div>
     <script>
