--- a/StoreFront/Views/Shared/_MemberPartial.cshtml
+++ b/StoreFront/Views/Shared/_MemberPartial.cshtml
@@ -6,6 +6,7 @@
         <li>@Html.ActionLink("Home", "Index", "Home")</li>
         <li>@Html.ActionLink("Search", "Index", "Products")</li>
         <li>@Html.ActionLink("Profile", "EditProfile", "User")</li>
+        <li>@Html.ActionLink("Admin", "OrdersAdmin", "Order")</li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li><a href="~/Cart/Index"><span id="cart" class="glyphicon glyphicon-shopping-cart"> </span> Cart</a></li>
