--- a/StoreFront/Content/bootstrap.css
+++ b/StoreFront/Content/bootstrap.css
@@ -162,9 +162,11 @@ button,
 input,
 select,
 textarea {
-  margin: 0;
   font-family: inherit;
   font-size: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
 }
 
 button,
@@ -183,6 +185,7 @@ input[type="reset"],
 input[type="submit"] {
   cursor: pointer;
   -webkit-appearance: button;
+    text-align: left;
 }
 
 button[disabled],
@@ -1684,6 +1687,7 @@ input[type="checkbox"] {
 
 input[type="file"] {
   display: block;
+    text-align: left;
 }
 
 select[multiple],
