--- a/StoreFront/Views/Home/Index.cshtml
+++ b/StoreFront/Views/Home/Index.cshtml
@@ -20,15 +20,15 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="~/Images/SkateboardPics/skateboard-img1.jpg">
+                    <img src="~/Images/skateboard-img1.jpg">
                 </div>
 
                 <div class="item">
-                    <img src="~/Images/SkateboardPics/skateboard-img2.jpg">
+                    <img src="~/Images/skateboard-img2.jpg">
                 </div>
 
                 <div class="item">
-                    <img src="~/Images/SkateboardPics/skateboard-img3.jpg">
+                    <img src="~/Images/skateboard-img3.jpg">
                 </div>
             </div>
 
@@ -75,13 +75,13 @@
     <div class="container-fluid" id="googleMap" style="height:400px;width:100%;"></div>
     <script>
         function myMap() {
-            var uluru = { lat: -37.857635, lng: 175.679869 };
+            var bagsEnd = { lat: -37.857635, lng: 175.679869 };
             var map = new google.maps.Map(document.getElementById('googleMap'), {
                 zoom: 4,
-                center: uluru
+                center: bagsEnd
             });
             var marker = new google.maps.Marker({
-                position: uluru,
+                position: bagsEnd,
                 map: map
             });
         }
