--- a/StoreFront/Views/Products/Index.cshtml
+++ b/StoreFront/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<StoreFront.Models.Products>
+﻿@model PagedList.IPagedList<StoreFront.Data.Product>
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Product Catalog";
