--- a/StoreFront/Views/Cart/Index.cshtml
+++ b/StoreFront/Views/Cart/Index.cshtml
@@ -74,7 +74,7 @@
 </table>
 <div class="container-fluid text-center">
     <h3>Total: $@totalPrice.ToString("0.00")</h3>
-    @Html.ActionLink("Place Order", "Address", "PlaceOrder", new { name = userName }, null)
+    @Html.ActionLink("Place Order", "Address", "PlaceOrder", new { name = userName }, new { @class = "btn btn-primary" })
 </div>
 
 <script>
