--- a/StoreFront/Views/PlaceOrder/Address.cshtml
+++ b/StoreFront/Views/PlaceOrder/Address.cshtml
@@ -1,29 +1,53 @@
-﻿@model IEnumerable<StoreFront.Data.Address>
+﻿@model StoreFront.Data.Address
 
 @{
     ViewBag.Title = "Address";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    StoreFront.Data.StoreFrontDataEntities dc = new StoreFront.Data.StoreFrontDataEntities();
 }
-<h2>Address</h2>
+<h2>Choose an Address</h2>
 
-<div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-        <span id="selected">Chose option</span>
-        <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu">
-        @foreach(var item in Model)
-        {
-            <li><a href="#">@Html.DisplayFor(model => item.Address1)</a></li>
-        }
-        <li><a href="#">New Address</a></li>
-    </ul>
-</div> 
+@using (Html.BeginForm("SelectedAddress", "PlaceOrder", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    <div class="form-horizontal">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.AddressID, "Addresses", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.AddressID, (IEnumerable<SelectListItem>)ViewBag.Addresses, htmlAttributes: new { @class = "form-control", @id = "dropDown", @onchange="hideAddressForm()"})
+                @Html.ValidationMessageFor(model => model.AddressID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+    </div>
+}
+
+<div id="createAddress" class="hidden">
+    @Html.Partial("_AddressCreatePartial", new StoreFront.Data.Address())
+</div>
+
 
 <script>
-    $('.dropdown-menu a').click(function () {
-        $('#selected').text($(this).text());
-    });
+
+    function showAddressForm() {
+        $("#createAddress").removeClass('hidden');
+    }
+
+    function hideAddressForm()
+    {
+        $("#createAddress").addClass('hidden');
+    }
+
+    $(document).ready(function () {
+        var newOption = "<option value='" + "99999999" + "' onclick='showAddressForm()'>Add New Address</option>";
+        $("#dropDown").append(newOption);
+    })
+
 </script>
 
 @section Scripts {
